# sqlite3_distances

./: CMakeLists.txt  COPYING  README.md
common/: fuzz.c  fuzz.h
damerau-levenshtein/: CMakeLists.txt  damerau-levenshtein.c  damerau-levenshtein.h  damerau_levenshtein_fuzzer.c  test_damerau_levenshtein.c
hamming/: CMakeLists.txt  hamming.c  hamming.h  hamming_fuzzer.c  test_hamming.c
longest_common_sequence/: CMakeLists.txt  lcs.c  lcs.h  lcs_fuzzer.c  test_lcs.c
optimal_string_alignment/: .c  CMakeLists.txt  optimal_string_alignment.c  optimal_string_alignment.h  optimal_string_alignment_fuzzer.c  test_optimal_string_alignment.c
sorensen-dice/: CMakeLists.txt  sorensen-dice.c  sorensen-dice.h  sorensen_dice_fuzzer.c  test_sorensen_dice.c
